feat: 支持模式配置
